Fixed misaligned contacts in profile view

--- a/resources/assets/sass/partak/_users.scss
+++ b/resources/assets/sass/partak/_users.scss
@@ -1,6 +1,7 @@
 .buddy-detail-img
 {
   margin-right: 30px;
+  margin-bottom: 50px;
 }
 
 .buddy-detail-icon
